--- a/MegaSegaController/Base.lproj/Main_iPhone.storyboard
+++ b/MegaSegaController/Base.lproj/Main_iPhone.storyboard
@@ -1,9 +1,71 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="c8p-RZ-JD1">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
+        <!--Start Screen View Controller-->
+        <scene sceneID="bhK-2f-eld">
+            <objects>
+                <viewController id="c8p-RZ-JD1" customClass="StartScreenViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3TC-Z6-fQY"/>
+                        <viewControllerLayoutGuide type="bottom" id="SJb-ZV-UEQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Nat-pC-nnt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0El-5e-JJT">
+                                <rect key="frame" x="112" y="20" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="Ry5-1O-qkm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2F-N3-bQm">
+                                <rect key="frame" x="144" y="58" width="33" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="vXZ-lx-hvc" kind="modal" id="7tm-ev-13H"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X0x-Qz-Qn6" customClass="iCarousel">
+                                <rect key="frame" x="20" y="96" width="280" height="452"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="c8p-RZ-JD1" id="zeZ-cU-q85"/>
+                                    <outlet property="delegate" destination="c8p-RZ-JD1" id="Jh2-Tf-IMj"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="O2F-N3-bQm" firstAttribute="centerX" secondItem="Nat-pC-nnt" secondAttribute="centerX" id="17q-nE-Bc4"/>
+                            <constraint firstItem="X0x-Qz-Qn6" firstAttribute="top" secondItem="O2F-N3-bQm" secondAttribute="bottom" constant="8" id="9dC-rm-1Bp"/>
+                            <constraint firstItem="0El-5e-JJT" firstAttribute="centerX" secondItem="O2F-N3-bQm" secondAttribute="centerX" id="ETI-Lb-Iam"/>
+                            <constraint firstItem="0El-5e-JJT" firstAttribute="top" secondItem="Nat-pC-nnt" secondAttribute="top" constant="20" symbolic="YES" id="KTl-XL-6OS"/>
+                            <constraint firstAttribute="trailing" secondItem="X0x-Qz-Qn6" secondAttribute="trailing" constant="20" id="mYj-A3-Qgn"/>
+                            <constraint firstItem="X0x-Qz-Qn6" firstAttribute="leading" secondItem="Nat-pC-nnt" secondAttribute="leading" constant="20" id="mix-me-GnS"/>
+                            <constraint firstItem="O2F-N3-bQm" firstAttribute="top" secondItem="0El-5e-JJT" secondAttribute="bottom" constant="8" symbolic="YES" id="zWG-dO-COD"/>
+                            <constraint firstItem="SJb-ZV-UEQ" firstAttribute="top" secondItem="X0x-Qz-Qn6" secondAttribute="bottom" constant="20" id="zxp-bd-rIu"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="carousel" destination="X0x-Qz-Qn6" id="GVb-IX-4UF"/>
+                        <outlet property="textEntry" destination="0El-5e-JJT" id="NKk-27-1q7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zES-F7-eTv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="58" y="-132"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -20,7 +82,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="110" y="91"/>
+            <point key="canvasLocation" x="551" y="-132"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
