--- a/MegaSegaController/Base.lproj/Main_iPhone.storyboard
+++ b/MegaSegaController/Base.lproj/Main_iPhone.storyboard
@@ -16,27 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0El-5e-JJT">
-                                <rect key="frame" x="112" y="20" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="Ry5-1O-qkm"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2F-N3-bQm">
-                                <rect key="frame" x="144" y="58" width="33" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Start">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="vXZ-lx-hvc" kind="modal" id="7tm-ev-13H"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X0x-Qz-Qn6" customClass="iCarousel">
-                                <rect key="frame" x="20" y="96" width="280" height="452"/>
+                                <rect key="frame" x="20" y="58" width="280" height="490"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <connections>
@@ -44,17 +25,54 @@
                                     <outlet property="delegate" destination="c8p-RZ-JD1" id="Jh2-Tf-IMj"/>
                                 </connections>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RZI-nG-zTF">
+                                <rect key="frame" x="66" y="6" width="188" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0El-5e-JJT">
+                                        <rect key="frame" x="20" y="7" width="97" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="S4w-5U-Zqt"/>
+                                            <constraint firstAttribute="width" constant="97" id="YkU-oH-lmz"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2F-N3-bQm">
+                                        <rect key="frame" x="131" y="-3" width="37" height="49"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="49" id="5pD-Tw-eIo"/>
+                                            <constraint firstAttribute="width" constant="37" id="alt-5F-0gy"/>
+                                        </constraints>
+                                        <state key="normal" image="button">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            <string key="backgroundImage">
+    //Hide that bar you dirty whore
+</string>
+                                        </state>
+                                        <connections>
+                                            <segue destination="vXZ-lx-hvc" kind="modal" id="7tm-ev-13H"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="O2F-N3-bQm" firstAttribute="centerY" secondItem="0El-5e-JJT" secondAttribute="centerY" constant="-0.5" id="0pM-pz-OcB"/>
+                                    <constraint firstAttribute="height" constant="44" id="N3l-tx-sEH"/>
+                                    <constraint firstAttribute="width" constant="188" id="VJa-qA-HCZ"/>
+                                    <constraint firstItem="O2F-N3-bQm" firstAttribute="leading" secondItem="0El-5e-JJT" secondAttribute="trailing" constant="14" id="Y7Y-bu-5PL"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="O2F-N3-bQm" firstAttribute="centerX" secondItem="Nat-pC-nnt" secondAttribute="centerX" id="17q-nE-Bc4"/>
-                            <constraint firstItem="X0x-Qz-Qn6" firstAttribute="top" secondItem="O2F-N3-bQm" secondAttribute="bottom" constant="8" id="9dC-rm-1Bp"/>
-                            <constraint firstItem="0El-5e-JJT" firstAttribute="centerX" secondItem="O2F-N3-bQm" secondAttribute="centerX" id="ETI-Lb-Iam"/>
-                            <constraint firstItem="0El-5e-JJT" firstAttribute="top" secondItem="Nat-pC-nnt" secondAttribute="top" constant="20" symbolic="YES" id="KTl-XL-6OS"/>
-                            <constraint firstAttribute="trailing" secondItem="X0x-Qz-Qn6" secondAttribute="trailing" constant="20" id="mYj-A3-Qgn"/>
-                            <constraint firstItem="X0x-Qz-Qn6" firstAttribute="leading" secondItem="Nat-pC-nnt" secondAttribute="leading" constant="20" id="mix-me-GnS"/>
-                            <constraint firstItem="O2F-N3-bQm" firstAttribute="top" secondItem="0El-5e-JJT" secondAttribute="bottom" constant="8" symbolic="YES" id="zWG-dO-COD"/>
-                            <constraint firstItem="SJb-ZV-UEQ" firstAttribute="top" secondItem="X0x-Qz-Qn6" secondAttribute="bottom" constant="20" id="zxp-bd-rIu"/>
+                            <constraint firstItem="RZI-nG-zTF" firstAttribute="top" secondItem="Nat-pC-nnt" secondAttribute="top" constant="6" id="4wn-mg-Jia"/>
+                            <constraint firstAttribute="centerX" secondItem="RZI-nG-zTF" secondAttribute="centerX" id="6gO-BA-uOG"/>
+                            <constraint firstItem="X0x-Qz-Qn6" firstAttribute="leading" secondItem="Nat-pC-nnt" secondAttribute="leading" constant="20" symbolic="YES" id="Pja-Ih-ujK"/>
+                            <constraint firstAttribute="bottom" secondItem="X0x-Qz-Qn6" secondAttribute="bottom" constant="20" symbolic="YES" id="V8k-5l-pKL"/>
+                            <constraint firstAttribute="trailing" secondItem="X0x-Qz-Qn6" secondAttribute="trailing" constant="20" symbolic="YES" id="kBu-PG-ffw"/>
+                            <constraint firstItem="X0x-Qz-Qn6" firstAttribute="top" secondItem="RZI-nG-zTF" secondAttribute="bottom" constant="8" id="pyK-IH-WEw"/>
                         </constraints>
                     </view>
                     <connections>
@@ -85,6 +103,14 @@
             <point key="canvasLocation" x="551" y="-132"/>
         </scene>
     </scenes>
+    <resources>
+        <image width="50" height="468">
+            <string key="name">
+    //Hide that bar you dirty whore
+</string>
+        </image>
+        <image name="button" width="37" height="37"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
